# Trip_Planner_Agent

./: .env.name  README.md  app.py  main.py  pyproject.toml  requirements.txt  setup.py
agent/: agentic_workflow.py
config/: config.yaml
notebook/: experiments.ipynb
tools/: arithmatic_op_tool.py  weather_info_tool.py
utils/: expense_calculator.py  model_loader.py  save_to_document.py
