[project]
name = "trip-planner-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.116.1",
    "googlemaps>=4.10.0",
    "ipykernel>=6.30.0",
    "langchain>=0.3.27",
    "langchain-google-community[places]>=2.0.7",
    "langchain-groq>=0.3.6",
    "langchain-tavily>=0.2.11",
    "langgraph>=0.6.0",
    "pip>=25.1.1",
    "python-dotenv>=1.1.1",
    "setuptools>=80.9.0",
]
